--- a/views/public/ShowNumber.ejs
+++ b/views/public/ShowNumber.ejs
@@ -15,7 +15,7 @@
 			</div>
 			<div class="card-body">
 			  <h1 class="text-center">Verify Number</h1>
-			  <form class="login_form" method="post" id="mobileNumberValidateForm" onsubmit="return validateMobileNumber()">
+			  <form class="login_form" method="post" id="mobileNumberValidateForm">
 				<div class="mb-3">
 					<label for="password" id="passwordLabel" class="form-label">Enter mobile number used to create account</label>
 					<input type="text" class="form-control" id="mobileNumber" name="mobileNumber" placeholder="Mobile Number">				
