--- a/views/public/editProfile.ejs
+++ b/views/public/editProfile.ejs
@@ -32,11 +32,11 @@
                                     <label for="floatingtext">Last Name</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="emailId" name="emailId" placeholder="Email"  value="<%= data.email %>">
+                                    <input type="text" class="form-control" id="emailId" name="emailId" placeholder="Email"  value="<%= data.email %>" readonly>
                                     <label for="floatingtext">email</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" value="<%= data.phone %>">
+                                    <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" value="<%= data.phone %>" readonly>
                                     <label for="floatingPassword">Phone</label>
                                 </div>
                                 <div class="form-floating mb-3">
