--- a/views/public/signup.ejs
+++ b/views/public/signup.ejs
@@ -26,29 +26,29 @@
                             <div class="card-body">
                                 <h1 class="text-center">Signup</h1>
                                 <form class="login_form" action="/signupAuthenticate" method="post" id="signupForm" onsubmit="return validateSignup()">
-                                <div class="mb-3">
+                                <div class="mb-2">
                                     <label for="firstName" id="firstNameLabel" class="form-label">First Name</label>
-                                    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'First Name'">				
+                                    <input type="text" class="form-control m-0" id="firstName" name="firstName" placeholder="First Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'First Name'">				
                                 </div>
                                 <div class="mb-2">
                                     <label for="lastName" id="lastNameLabel" class="form-label">Last Name</label>
-                                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'">				
+                                    <input type="text" class="form-control m-0" id="lastName" name="lastName" placeholder="Last Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Last Name'">				
                                 </div>
                                 <div class="mb-2">
                                     <label for="Email" id="emailLabel" class="form-label">Email Id</label>
-                                    <input type="email" class="form-control" id="emailId" name="emailId" placeholder="Email Id" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Id'">				
+                                    <input type="email" class="form-control m-0" id="emailId" name="emailId" placeholder="Email Id" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Id'">				
                                 </div>
                                 <div class="mb-2">
                                     <label for="mobile" id="mobileLabel" class="form-label">Mobile</label>
-                                    <input type="text" class="form-control" id="mobileNumber" name="mobileNumber" placeholder="mobile" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Mobile'">				
+                                    <input type="text" class="form-control m-0" id="mobileNumber" name="mobileNumber" placeholder="mobile" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Mobile'">				
                                 </div>
                                 <div class="mb-2">
                                     <label for="password" id="passwordLabel" class="form-label">Password</label>
-                                    <input type="password" class="form-control" id="signupPassword" name="signupPassword" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">				
+                                    <input type="password" class="form-control m-0" id="signupPassword" name="signupPassword" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">				
                                 </div>
                                 <div class="mb-2">
                                     <label for="confirmPassword" id="confirmPasswordLabel" class="form-label">Confirm Password</label>
-                                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'">				
+                                    <input type="password" class="form-control m-0" id="confirmPassword" name="confirmPassword" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Confirm Password'">				
                                 </div>
                                 <button class="btn btn-warning w-100 py-8 fs-4 mb-4 rounded-2">Submit</button>
                                 <div class="d-flex align-items-center justify-content-center">
