--- a/views/admin/category/index.ejs
+++ b/views/admin/category/index.ejs
@@ -2,25 +2,6 @@
 <div class="container-fluid">
     <div class="card">
       <div class="card-body">
-        <% if (locals.status === "success") { %>
-            <div class="alert alert-success" role="alert">
-                <%= locals.msg %>
-            </div>
-            <script>
-              setTimeout(()=>{
-                window.location.href = "/admin/category"; 
-              },800)
-            </script>
-        <% } if(locals.status === "error"){ %>
-            <div class="alert alert-danger" role="alert">
-                <%= locals.msg %>
-            </div>
-            <script>
-              setTimeout(()=>{
-                window.location.href = "/admin/category"; 
-              },800)
-            </script>
-        <% } %>
         <h5 class="card-title fw-semibold mb-4 float-start">Category</h5>
         <a href="/admin/createcategory"><button type="button" class="btn btn-primary float-end">Add category</button></a>
         <div class="card w-100">
@@ -59,20 +40,16 @@
                       <td class="border-bottom-0">
                         <h6 class="fw-semibold mb-1">
                           <% if (!item.status) { %>
-                            <a href="/admin/categoryStatus/<%= item._id %>-true">
-                              <button type="button" class="btn btn-danger w-50">Deactive</button>
-                            </a>
-                          <% } else { %> 
-                            <a href="/admin/categoryStatus/<%= item._id %>-false">
-                              <button type="button" class="btn btn-success w-50">Active</button>
-                            </a>
+                            <button type="button" onclick="changeStatus('<%= item._id %>', true, this)" class="btn btn-success w-50">Active</button>
+                            <% } else { %> 
+                              <button type="button" onclick="changeStatus('<%= item._id %>', false, this)" class="btn btn-danger w-50">Deactive</button>
                           <% } %>
                         </h6>
                       </td>
                       <td class="border-bottom-0">
                           <a href="/admin/editCategory?id=<%= item._id %>"><button type="button" class="btn btn-primary w-50">Edit</button></a>
                           <br><br>
-                          <a href="/admin/deleteCategory?id=<%= item._id %>"><button type="button" class="btn btn-danger w-50" onclick="return confirm('Are you sure to Delete?')">Delete</button></a>
+                          <button type="button" onclick="deleteCategory('<%= item._id %>')" class="btn btn-danger w-50">Delete</button>
                       </td>
                   </tr>
                   <% i++ }) }else{ %>
@@ -86,3 +63,101 @@
       </div>
     </div>
   </div>
+
+
+  
+
+<script>
+
+async function changeStatus(orderId, status, btn) {
+    try {
+      console.log(btn)
+      const response = await fetch("/admin/categoryStatus", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({orderId, status}),
+      });
+
+      const result = await response.json()
+      
+      if(result.status === "success"){
+        Toastify({
+            text: result.msg,
+            className: "info",
+            style: {
+                background: "linear-gradient(to right, #0b7303, #24c9a3)",
+            }
+            }).showToast();
+            setTimeout(() => {
+              location.reload()
+            }, 1000);
+
+        
+      }else{
+        
+      }
+      
+    } catch (error) {
+        Toastify({
+          text: error.message,
+          className: "info",
+          style: {
+              background: "linear-gradient(to right, #ff0000, #dd2a7f)",
+          }
+        }).showToast();
+    }
+
+}
+
+function deleteCategory(orderId) {
+  Swal.fire({
+    title: 'Are you sure?',
+    text: "You won't be able to revert this!",
+    icon: 'warning',
+    showCancelButton: true,
+    confirmButtonColor: '#3085d6',
+    cancelButtonColor: '#d33',
+    confirmButtonText: 'Yes, delete it!'
+  }).then(async (result) => {
+    if (result.isConfirmed) {
+      try {
+        const response = await fetch("/admin/deleteCategory", {
+          method: "DELETE",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({orderId}),
+        });
+
+        const result = await response.json()
+        
+        if(result.status === "success"){
+              Swal.fire(
+                'Deleted!',
+                result.msg,
+                'success'
+              )
+              setTimeout(() => {
+                location.reload()
+              }, 1000);
+        }else{
+          throw new Error(result.msg)
+        }
+      } catch (error) {
+          Toastify({
+            text: error.message,
+            className: "info",
+            style: {
+                background: "linear-gradient(to right, #ff0000, #dd2a7f)",
+            }
+          }).showToast();
+      }
+    }
+  })
+}
+
+</script>
+
+
