--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -9,6 +9,8 @@
     <link href="/assets/css/custom/customstyle.css" rel=" stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.20/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
 </head>
 <body>
     <!--  Body Wrapper -->
